# yukti

./: .gitignore  BENCHMARKS-rust-v-cyrius.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  bench-history.csv  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: bench.bcyr  yantra_bench.rs
docs/architecture/: overview.md
docs/audit/: 2026-04-19-audit.md
docs/benchmarks/: history.csv  results.md
docs/development/: cyrius-usage.md  roadmap.md  threat-model.md
docs/development/issues/: 2026-04-19-aarch64-syscall-portability.md  2026-04-19-cc5-aarch64-repro.md  2026-04-30-cyrius-cc5-aarch64-packaging.md  2026-06-23-err-enum-collision-namespace.md
docs/guides/: testing.md
examples/: detect.rs
fuzz/: Cargo.toml  fuzz_mount_table.fcyr  fuzz_parse_uevent.fcyr  fuzz_partition_table.fcyr
fuzz/fuzz_targets/: fuzz_mount_table.rs  fuzz_parse_uevent.rs
lib/: alloc.cyr  args.cyr  assert.cyr  bench.cyr  bounds.cyr  callback.cyr  chrono.cyr  fmt.cyr  fnptr.cyr  freelist.cyr  fs.cyr  hashmap.cyr  io.cyr  json.cyr  mmap.cyr  patra.cyr  process.cyr  regex.cyr  sakshi.cyr  sakshi_full.cyr  str.cyr  string.cyr  syscalls.cyr  tagged.cyr  thread.cyr  vec.cyr
programs/: core_smoke.cyr
rust-old/: Cargo.toml  codecov.yml  device.rs  error.rs  event.rs  linux.rs  optical.rs  yukti_bench.rs
rust-old/dot-cargo/: config.toml
rust-old/fuzz/: Cargo.toml
rust-old/fuzz/fuzz_targets/: fuzz_mount_table.rs  fuzz_parse_uevent.rs
scripts/: bench-history.sh  bundle.sh  retest-aarch64.sh  version-bump.sh
src/: audio.cyr  core.cyr  device.cyr  device.rs  device_db.cyr  error.cyr  error.rs  event.cyr  event.rs  gpu.cyr  lib.cyr  lib.rs  linux.cyr  linux.rs  main.cyr  network.cyr  optical.cyr  optical.rs  partition.cyr  pci.cyr  storage.cyr  storage.rs  syscalls.cyr  udev.cyr  udev.rs  udev_rules.cyr  udev_rules.rs
tests/: yukti.tcyr
tests/bcyr/: yukti.bcyr
tests/tcyr/: yukti.tcyr
