[package]
name = "yantra"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Device abstraction layer for AGNOS — USB, optical, block devices, udev hotplug"
homepage = "https://github.com/MacCracken/yantra"
repository = "https://github.com/MacCracken/yantra"
readme = "README.md"
keywords = ["device", "usb", "udev", "hotplug", "hardware"]
categories = ["hardware-support", "os"]

[features]
default = ["udev", "storage", "optical"]
udev = ["dep:libc"]
storage = ["dep:libc"]
optical = ["dep:libc"]
ai = ["dep:reqwest", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Optional (ai feature)
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
bitflags = "2"
libc = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "yantra_bench"
harness = false
